add dtos and tms